[package]
name = "blue_typemap"
version = "1.0.0"
edition = "2021"
authors = ["Elham Aryanpur <elhamaryanpur5@gmail.com>"]
description = "A TypeMap Dependency Injection method for dynamic function parameters"
repository = "https://github.com/AryanpurTech/BlueTypeMap"
keywords = ["api", "parsing", "generator"]
categories = ["accessibility"]
license = "Apache-2.0"

[lib]
name = "blue_typemap"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "time_bench"
harness = false

[dependencies]

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false