[package]
name = "blue_typemap"
version = "2.0.0"
edition = "2024"
authors = ["Elham Aryanpur <elhamaryanpur5@gmail.com>"]
description = "A TypeMap Dependency Injection method for dynamic function parameters"
repository = "https://github.com/AryanpurTech/BlueTypeMap"
keywords = ["api", "parsing", "generator"]
categories = ["accessibility"]
license = "Apache-2.0"

[features]
default = []
send = []

[lib]
name = "blue_typemap"

[dependencies]
rustc-hash = "2.1.1"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "time_bench"
harness = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
